# ros2_medkit

./: README.md
.github/workflows/: ci.yml
docs/: README.md  architecture.puml
postman/: README.md
postman/collections/: ros2-medkit-gateway.postman_collection.json
postman/environments/: local.postman_environment.json
src/ros2_diag_tree_gateway/: CMakeLists.txt
src/ros2_diag_tree_gateway/src/: gateway_node.cpp
src/ros2_diag_tree_gateway/test/: test_gateway_node.cpp
src/ros2_medkit_gateway/: CMakeLists.txt  README.md  package.xml
src/ros2_medkit_gateway/config/: gateway_params.yaml
src/ros2_medkit_gateway/include/ros2_medkit_gateway/: discovery_manager.hpp  gateway_node.hpp  models.hpp  rest_server.hpp
src/ros2_medkit_gateway/launch/: demo_nodes.launch.py
src/ros2_medkit_gateway/src/: discovery_manager.cpp  gateway_node.cpp  main.cpp  rest_server.cpp
src/ros2_medkit_gateway/test/: test_integration.test.py
src/ros2_medkit_gateway/test/demo_nodes/: brake_actuator.cpp  brake_pressure_sensor.cpp  calibration_service.cpp  door_status_sensor.cpp  engine_temp_sensor.cpp  light_controller.cpp  rpm_sensor.cpp
